fix: increase floating button size in event list on mobile

--- a/public/common/eventList.css
+++ b/public/common/eventList.css
@@ -29,6 +29,7 @@
         display: flex;
         align-items: center;
         justify-content: center;
+        padding: var(--medium-gap);
     }
 
     #desktop-create-button {
